Corrected some bugs: icons height, initial contacts alignment

--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,9 @@ body {
   .imgs-line-n {
     border: 1px solid rgba(248, 209, 50, 0.554); }
 
+.list {
+  list-style: none; }
+
 .u-center-text {
   text-align: center !important; }
 
@@ -483,6 +486,9 @@ body {
 
 .svg-icons {
   height: 20px; }
+
+.u-width-small {
+  width: calc((100% - 4rem)); }
 
 .bars {
   max-width: 80%;
@@ -868,18 +874,18 @@ body {
   text-align: center;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-  transition: transform .3s; }
+  transition: transform 0.3s; }
   @media only screen and (max-width: 56.25em) {
     .feature-box {
       padding: 2rem; } }
   .feature-box__icon {
     font-size: 6rem;
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
     display: inline-block;
     background-image: linear-gradient(to right, #ffb900, #ff7730);
     -webkit-background-clip: text;
     color: transparent;
-    transition: all .8s ease;
+    transition: all 0.8s ease;
     transform: rotateY(0deg) scale(1);
     filter: brightness(80%); }
     @media only screen and (max-width: 56.25em) {
@@ -888,7 +894,7 @@ body {
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
   .feature-box:hover .feature-box__icon {
-    transition: all .8s ease;
+    transition: all 0.8s ease;
     transform: rotateY(180deg) scale(1.3);
     filter: brightness(100%); }
 
@@ -1482,13 +1488,14 @@ body {
 
 .section-projects {
   margin-top: 5vh;
-  margin-bottom: 1rem;
+  margin-bottom: 5rem;
   color: #fbe177; }
 
 .section-about {
   color: #fbe177;
   padding: 0rem 5rem;
-  margin-top: 5rem; }
+  margin-top: 5rem;
+  margin-bottom: 5rem; }
   @media only screen and (max-width: 56.25em) {
     .section-about {
       padding: 0rem 5rem; } }
@@ -2319,7 +2326,7 @@ body {
   border: none;
   text-align: left;
   outline: none;
-  font-size: 15px;
+  font-size: 18px;
   transition: 0.4s; }
 
 .accordion:hover {
