--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -221,3 +221,8 @@ body {
     border: 1px solid rgba(248, 209, 50, 0.554);
   }
 }
+
+// --- Styles
+.list {
+  list-style: none;
+}
