--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,6 @@
 .section-projects {
   margin-top: 5vh;
-  margin-bottom: 1rem;
+  margin-bottom: 5rem;
 
   color: $color-primary-light;
 }
@@ -9,6 +9,7 @@
   color: $color-primary-light;
   padding: 0rem 5rem;
   margin-top: 5rem;
+  margin-bottom: 5rem;
 
   @include respond(tab-port) {
     padding: 0rem 5rem;
